Only try to handle keys in query editor if not handled

This fixes the search entry grabbing pasted URLs.

https://bugzilla.gnome.org/show_bug.cgi?id=680159